# apps

./: .gitignore  Air-Pulse Waveform research.md  BUILD_STATUS.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_demo.txt  CONTRIBUTING.md  Clean up and organize these notes into a.md  Implement orgasm detection and point-of-.md  LICENSE  OH MIA.txt  PI4_SETUP.md  PatternEngine cpp  README.md  TENS Integration Design.md  Tense Waveform Technology.md  VISUAL_ENHANCEMENTS.md  build.sh  cppcheck_report.txt  demo_enhanced_patterns.sh  explanation.md  explination.md  fixes.patch  fixing code.md  fluid catchment.md  gameify.md  memory_manager.patch  orgasm control algorithm.md  pmd_cpd_report.txt  pump cup works on the body when used.txt  setup-dev-environment.sh  start_gui_eglfs.sh  start_gui_wayland.sh  start_vacuum_controller.sh  strace_output.txt  task-list.md  test_enhanced_air_pulse.cpp  test_libgpiod_v2.cpp  trimbler sex toy.md  vacuum Controller Project - Parts List.md  (+1 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
cmake/: VacuumControllerConfig.cmake.in
config/: patterns.json  settings.json  therapeutic_patterns.json
data/games/: denial_challenge.json  edging_beginner.json  endurance_marathon.json  fluid_production.json  shock_roulette.json  stillness_challenge.json
docs/: AIR_PULSE_ARCHITECTURE.md  API_REFERENCE.md  AUTOMATED_ORGASM_PATTERNS.md  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_PRACTICES.md  EMC_Analysis_and_Mitigation.md  EMC_Component_Layout.md  EMC_Grounding_and_Power.md  EMC_Testing_Plan.md  GUI_FEATURE_PARITY_AUDIT.md  HARDWARE_TESTING.md  HIGH_RESOLUTION_UI_IMPROVEMENTS.md  LIBGPIOD_V2_MIGRATION.md  PI4_SETUP.md  PROJECT_STRUCTURE.md  Plan.md  README.md  USER_MANUAL.md  askii drawings.md  check-list.md  code mods.md  cup explination.md  electromagnetic interference.md  explanation.md  fixing code.md  magic potion.md  milking-cycle-design.md  milking-cycle-research.md  milking.md  orgasm control algorithm.md  questions.md  urethral-estim-research.md  vulva-pump-research.md
docs/manufacturing/: README.md  cup_tech_drawing.dxf
examples/: automated_orgasm_demo.cpp  continuous_orgasm_demo.cpp  enhanced_air_pulse_usage.cpp
hardware/cup/: cup.scad
packaging/debian/: postinst  postrm  prerm
packaging/systemd/: vacuum-controller.service.in
scripts/: test_hardware.sh  version.sh
src/: VacuumController.cpp  VacuumController.h  main.cpp
src/admin/: AccountManager.cpp  AccountManager.h  DeviceRegistry.cpp  DeviceRegistry.h  RemoteMonitor.cpp  RemoteMonitor.h
src/calibration/: CalibrationManager.cpp  CalibrationManager.h
src/control/: OrgasmControlAlgorithm.cpp  OrgasmControlAlgorithm.h
src/core/: JsonFileHelper.h  SafeOperationHelper.h  StatefulComponent.h  StatisticsUtils.h
src/error/: CrashHandler.cpp  CrashHandler.h  ErrorManager.cpp  ErrorManager.h
src/game/: AchievementSystem.cpp  AchievementSystem.h  ConsequenceEngine.cpp  ConsequenceEngine.h  GameDefinition.cpp  GameDefinition.h  GameEngine.cpp  GameEngine.h  GameTypes.h  ProgressTracker.cpp  ProgressTracker.h
src/gui/: AdminPanel.cpp  AdminPanel.h  ArousalMonitor.cpp  ArousalMonitor.h  CalibrationInterface.cpp  CalibrationInterface.h  CameraMonitor.cpp  CameraMonitor.h  CustomPatternDialog.cpp  CustomPatternDialog.h  CustomPatternEditor.cpp  CustomPatternEditor.h  ExecutionModeSelector.cpp  ExecutionModeSelector.h  FluidMonitor.cpp  FluidMonitor.h  MainWindow.cpp  MainWindow.h  MotionMonitor.cpp  MotionMonitor.h  ParameterAdjustmentPanel.cpp  ParameterAdjustmentPanel.h  PatternSelector.cpp  PatternSelector.h  PressureMonitor.cpp  PressureMonitor.h  PrivilegePanel.cpp  PrivilegePanel.h  SafetyPanel.cpp  SafetyPanel.h  SettingsDialog.cpp  SettingsDialog.h  SettingsPanel.cpp  SettingsPanel.h  SystemDiagnosticsPanel.cpp  SystemDiagnosticsPanel.h
src/hardware/: ActuatorControl.cpp  ActuatorControl.h  CameraMotionSensor.cpp  CameraMotionSensor.h  ClitoralOscillator.cpp  ClitoralOscillator.h  FluidSensor.cpp  FluidSensor.h  HardwareManager.cpp  HardwareManager.h  HeartRateSensor.cpp  HeartRateSensor.h  MCP3008.cpp  MCP3008.h  MotionSensor.cpp  MotionSensor.h  SensorInterface.cpp  SensorInterface.h  TENSController.cpp  TENSController.h
src/licensing/: LicenseManager.cpp  LicenseManager.h  LicenseServer.cpp  LicenseServer.h
src/logging/: DataLogger.cpp  DataLogger.h  DataLoggerSafetyAdapter.cpp  DataLoggerSafetyAdapter.h  ISafetyLogger.h
src/network/: MultiUserController.cpp  MultiUserController.h
src/patterns/: PatternDefinitions.cpp  PatternDefinitions.h  PatternEngine.cpp  PatternEngine.h  PatternTemplateManager.cpp  PatternTemplateManager.h  PatternValidator.cpp  PatternValidator.h
src/performance/: MemoryManager.cpp  MemoryManager.h  PerformanceMonitor.cpp  PerformanceMonitor.h
src/reporting/: DataExporter.cpp  DataExporter.cpp.orig  DataExporter.h  ReportGenerator.h
src/safety/: AntiDetachmentMonitor.cpp  AntiDetachmentMonitor.h  EmergencyStop.cpp  EmergencyStop.h  EmergencyStopCoordinator.cpp  EmergencyStopCoordinator.h  LightweightSafetyMonitor.cpp  LightweightSafetyMonitor.h  SafetyConstants.h  SafetyManager.cpp  SafetyManager.h
src/testing/: HardwareTester.cpp  HardwareTester.h
src/threading/: DataAcquisitionThread.cpp  (+7 more)
tests/: CMakeLists.txt  GUITests.cpp  GUITests.h  HardwareTests.cpp  HardwareTests.h  IntegrationTests.cpp  IntegrationTests.h  OrgasmControlAlgorithmTests.cpp  OrgasmControlAlgorithmTests.h  PatternTests.cpp  PatternTests.h  PerformanceTests.cpp  PerformanceTests.h  SafetySystemTests.cpp  SafetySystemTests.h  TestFramework.cpp  TestFramework.h  TestMain.cpp  TestRunner.cpp  TestRunner.h  TestRunnerMain.cpp  UserInterfaceTests.cpp  UserInterfaceTests.h
tests/gui/: test_ArousalMonitor.cpp  test_ExecutionModeSelector.cpp  test_SettingsPanel_Arousal.cpp
tests/mocks/: MockActuatorControl.cpp  MockActuatorControl.h  MockHardwareManager.cpp  MockHardwareManager.h  MockOrgasmControlAlgorithm.cpp  MockOrgasmControlAlgorithm.h  MockSensorInterface.cpp  MockSensorInterface.h  MockVacuumController.cpp  MockVacuumController.h
(+11 files in other folders)
