# Documentation CMakeLists.txt

find_package(Doxygen REQUIRED)

if(DOXYGEN_FOUND)
    # Set Doxygen configuration
    set(DOXYGEN_PROJECT_NAME "Vacuum Controller GUI System")
    set(DOXYGEN_PROJECT_NUMBER ${PROJECT_VERSION})
    set(DOXYGEN_PROJECT_BRIEF "Industrial Vacuum Controller with Qt GUI for Raspberry Pi")
    set(DOXYGEN_PROJECT_LOGO "${CMAKE_SOURCE_DIR}/docs/images/logo.png")
    
    # Input and output directories
    set(DOXYGEN_INPUT_DIR "${CMAKE_SOURCE_DIR}/src")
    set(DOXYGEN_OUTPUT_DIR "${CMAKE_BINARY_DIR}/docs")
    set(DOXYGEN_HTML_OUTPUT "html")
    set(DOXYGEN_LATEX_OUTPUT "latex")
    
    # Documentation settings
    set(DOXYGEN_EXTRACT_ALL YES)
    set(DOXYGEN_EXTRACT_PRIVATE YES)
    set(DOXYGEN_EXTRACT_STATIC YES)
    set(DOXYGEN_EXTRACT_LOCAL_CLASSES YES)
    set(DOXYGEN_EXTRACT_ANON_NSPACES YES)
    set(DOXYGEN_HIDE_UNDOC_MEMBERS NO)
    set(DOXYGEN_HIDE_UNDOC_CLASSES NO)
    set(DOXYGEN_HIDE_FRIEND_COMPOUNDS NO)
    set(DOXYGEN_HIDE_IN_BODY_DOCS NO)
    set(DOXYGEN_INTERNAL_DOCS YES)
    set(DOXYGEN_CASE_SENSE_NAMES NO)
    set(DOXYGEN_HIDE_SCOPE_NAMES NO)
    set(DOXYGEN_SHOW_INCLUDE_FILES YES)
    set(DOXYGEN_SHOW_GROUPED_MEMB_INC NO)
    set(DOXYGEN_FORCE_LOCAL_INCLUDES NO)
    set(DOXYGEN_INLINE_INFO YES)
    set(DOXYGEN_SORT_MEMBER_DOCS YES)
    set(DOXYGEN_SORT_BRIEF_DOCS NO)
    set(DOXYGEN_SORT_MEMBERS_CTORS_1ST NO)
    set(DOXYGEN_SORT_GROUP_NAMES NO)
    set(DOXYGEN_SORT_BY_SCOPE_NAME NO)
    
    # Source browsing
    set(DOXYGEN_SOURCE_BROWSER YES)
    set(DOXYGEN_INLINE_SOURCES NO)
    set(DOXYGEN_STRIP_CODE_COMMENTS YES)
    set(DOXYGEN_REFERENCED_BY_RELATION YES)
    set(DOXYGEN_REFERENCES_RELATION YES)
    set(DOXYGEN_REFERENCES_LINK_SOURCE YES)
    set(DOXYGEN_SOURCE_TOOLTIPS YES)
    set(DOXYGEN_USE_HTAGS NO)
    set(DOXYGEN_VERBATIM_HEADERS YES)
    
    # HTML output
    set(DOXYGEN_GENERATE_HTML YES)
    set(DOXYGEN_HTML_FILE_EXTENSION ".html")
    set(DOXYGEN_HTML_HEADER "${CMAKE_SOURCE_DIR}/docs/doxygen/header.html")
    set(DOXYGEN_HTML_FOOTER "${CMAKE_SOURCE_DIR}/docs/doxygen/footer.html")
    set(DOXYGEN_HTML_STYLESHEET "${CMAKE_SOURCE_DIR}/docs/doxygen/custom.css")
    set(DOXYGEN_HTML_EXTRA_STYLESHEET "")
    set(DOXYGEN_HTML_EXTRA_FILES "")
    set(DOXYGEN_HTML_COLORSTYLE_HUE 220)
    set(DOXYGEN_HTML_COLORSTYLE_SAT 100)
    set(DOXYGEN_HTML_COLORSTYLE_GAMMA 80)
    set(DOXYGEN_HTML_TIMESTAMP YES)
    set(DOXYGEN_HTML_DYNAMIC_SECTIONS NO)
    set(DOXYGEN_HTML_INDEX_NUM_ENTRIES 100)
    set(DOXYGEN_GENERATE_DOCSET NO)
    set(DOXYGEN_GENERATE_HTMLHELP NO)
    set(DOXYGEN_GENERATE_QHP NO)
    set(DOXYGEN_GENERATE_ECLIPSEHELP NO)
    set(DOXYGEN_DISABLE_INDEX NO)
    set(DOXYGEN_GENERATE_TREEVIEW YES)
    set(DOXYGEN_ENUM_VALUES_PER_LINE 4)
    set(DOXYGEN_TREEVIEW_WIDTH 250)
    set(DOXYGEN_EXT_LINKS_IN_WINDOW NO)
    set(DOXYGEN_FORMULA_FONTSIZE 10)
    set(DOXYGEN_FORMULA_TRANSPARENT YES)
    set(DOXYGEN_USE_MATHJAX NO)
    set(DOXYGEN_SEARCHENGINE YES)
    set(DOXYGEN_SERVER_BASED_SEARCH NO)
    set(DOXYGEN_EXTERNAL_SEARCH NO)
    
    # LaTeX output
    set(DOXYGEN_GENERATE_LATEX NO)
    
    # Diagrams
    set(DOXYGEN_HAVE_DOT YES)
    set(DOXYGEN_CLASS_DIAGRAMS YES)
    set(DOXYGEN_MSCGEN_PATH "")
    set(DOXYGEN_DIA_PATH "")
    set(DOXYGEN_HIDE_UNDOC_RELATIONS YES)
    set(DOXYGEN_CLASS_GRAPH YES)
    set(DOXYGEN_COLLABORATION_GRAPH YES)
    set(DOXYGEN_GROUP_GRAPHS YES)
    set(DOXYGEN_UML_LOOK NO)
    set(DOXYGEN_UML_LIMIT_NUM_FIELDS 10)
    set(DOXYGEN_TEMPLATE_RELATIONS NO)
    set(DOXYGEN_INCLUDE_GRAPH YES)
    set(DOXYGEN_INCLUDED_BY_GRAPH YES)
    set(DOXYGEN_CALL_GRAPH NO)
    set(DOXYGEN_CALLER_GRAPH NO)
    set(DOXYGEN_GRAPHICAL_HIERARCHY YES)
    set(DOXYGEN_DIRECTORY_GRAPH YES)
    set(DOXYGEN_DOT_IMAGE_FORMAT png)
    set(DOXYGEN_INTERACTIVE_SVG NO)
    set(DOXYGEN_DOT_PATH "")
    set(DOXYGEN_DOTFILE_DIRS "")
    set(DOXYGEN_MSCFILE_DIRS "")
    set(DOXYGEN_DIAFILE_DIRS "")
    set(DOXYGEN_PLANTUML_JAR_PATH "")
    set(DOXYGEN_PLANTUML_INCLUDE_PATH "")
    set(DOXYGEN_DOT_GRAPH_MAX_NODES 50)
    set(DOXYGEN_MAX_DOT_GRAPH_DEPTH 0)
    set(DOXYGEN_DOT_TRANSPARENT NO)
    set(DOXYGEN_DOT_MULTI_TARGETS YES)
    set(DOXYGEN_GENERATE_LEGEND YES)
    set(DOXYGEN_DOT_CLEANUP YES)
    
    # Configure Doxygen
    doxygen_add_docs(docs
        ${CMAKE_SOURCE_DIR}/src
        ${CMAKE_SOURCE_DIR}/docs
        COMMENT "Generating API documentation with Doxygen"
    )
    
    # Install documentation
    install(DIRECTORY ${CMAKE_BINARY_DIR}/docs/html/
        DESTINATION ${CMAKE_INSTALL_DOCDIR}/api
        OPTIONAL
    )
    
else()
    message(WARNING "Doxygen not found, documentation will not be built")
endif()
